@@ -1,0 +1,44 @@
+default: true
+input:
+  module: aws
+  metricset: cloudwatch
+  defaults:
+    metrics:
+      - namespace: AWS/VPN
+        statistic: ["Average"]
+        name:
+          - TunnelState
+      - namespace: AWS/VPN
+        statistic: ["Sum"]
+        name:
+          - TunnelDataIn
+          - TunnelDataOut
+      - namespace: AWS/TransitGateway
+        statistic: ["Sum"]
+        name:
+          - BytesIn
+          - BytesOut
+          - PacketsIn
+          - PacketsOut
+          - PacketDropCountBlackhole
+          - PacketDropCountNoRoute
+      - namespace: AWS/NATGateway
+        statistic: ["Sum"]
+        name:
+          - BytesInFromDestination
+          - BytesInFromSource
+          - BytesOutToDestination
+          - BytesOutToSource
+          - ConnectionAttemptCount
+          - ConnectionEstablishedCount
+          - ErrorPortAllocation
+          - IdleTimeoutCount
+          - PacketsDropCount
+          - PacketsInFromDestination
+          - PacketsInFromSource
+          - PacketsOutToDestination
+          - PacketsOutToSource
+      - namespace: AWS/NATGateway
+        statistic: ["Maximum"]
+        name:
+          - ActiveConnectionCount
